--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,5 @@
+/* Google fonts import */
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&display=swap');
 /* Asterisk wildcard selector to override default styles added by the browser*/
 * {
     padding: 0;
@@ -5,14 +7,23 @@
     box-sizing: border-box;
 }
 
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    color:#3a3a3a;
+    font-family: 'Lato', sans-serif
+}
+
 header {
-    background-color:lightcoral
+    background-color:lightcoral;
 }
 
 main {
-    background-color: lightblue
+    background-color: lightblue;
+;    flex: 1 0 auto;
 }
 
 footer {
-    background-color:orange
+    background-color:orange;
 }
