--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -16,7 +16,13 @@ body {
 }
 
 header {
-    background-color:lightcoral;
+    background-color: #fff;
+    padding: 0rem;
+    position: fixed;
+    z-index: 99;
+    width: 100%;
+    box-shadow: 0 2px 2px #3a3a3a
+
 }
 
 h1 {
