--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -17,13 +17,14 @@ body {
 
 header {
     background-color: #fff;
-    padding: 0rem;
+    padding: 0 1rem;
     position: fixed;
     z-index: 99;
     width: 100%;
     box-shadow: 0 2px 2px #3a3a3a
 
 }
+
 header a {
     text-decoration: none;
     color: inherit
@@ -35,9 +36,24 @@ h1 {
     letter-spacing: 2px;
     color: #252525;
 }
+
+#menu {
+    font-size: 110%;
+    letter-spacing: 4px;
+    list-style-type: none;
+}
+
+#menu > li {
+    margin-bottom: 1em;
+}
+
+.active {
+    border-bottom: 1px solid #3a3a3a;
+}
+
 main {
     background-color: lightblue;
-;    flex: 1 0 auto;
+    flex: 1 0 auto;
 }
 
 footer {
