style navbar drop down menu and set to hidden

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,6 +7,7 @@
     box-sizing: border-box;
 }
 
+/* general styles */
 body {
     min-height: 100vh;
     display: flex;
@@ -15,6 +16,7 @@ body {
     font-family: 'Lato', sans-serif
 }
 
+/* header */
 header {
     background-color: #fff;
     padding: 0 1rem;
@@ -49,6 +51,17 @@ h1 {
 
 .active {
     border-bottom: 1px solid #3a3a3a;
+}
+
+/* navbar styles with dropdown toggle */
+nav {
+    position: absolute;
+    background-color: #fff;
+    width: 100%;
+    left: 0;
+    padding: 0rem;
+    box-shadow: 0 2px 2px #3a3a3a;
+    display: none
 }
 
 /* Main content */
