add circular image to reasons section

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -144,6 +144,13 @@ main {
     width: 90vw;
     margin-bottom: 20px;
     border-radius: 50%;
+    max-width: 300px;
+    max-height: 300px;
+}
+#benefits-image {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 /* Footer */
@@ -195,9 +202,25 @@ main {
         /* Push main content down to accomodate larger header */
         margin-top: 79px;
     }
+    /* hero */
     #cover-text {
         width: 300px;
         right: 50px;
+    }
+    /*reasons section*/
+    #benefits-physical,
+    #benefits-mental {
+        display:flex;
+        flex-direction:column;
+        width:100%;
+    }
+    #benefits-physical > div,
+    #benefits-mental > div {
+        width: 75%
+    }
+    #benefits-mental > div {
+        text-align: end;
+        align-self: flex-end;
     }
 }
 
