--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -210,9 +210,9 @@ main {
     /*reasons section*/
     #benefits-physical,
     #benefits-mental {
-        display:flex;
-        flex-direction:column;
-        width:100%;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
     }
     #benefits-physical > div,
     #benefits-mental > div {
@@ -225,8 +225,36 @@ main {
 }
 
 /* large devices (laptops and desktops 992px and up) */
-@media screen and (min-width: 992px){
+@media screen and (min-width: 992px) {
     #menu a:hover{
         border-bottom: 1px solid #3a3a3a;
+    }
+}
+
+@media screen and (min-width: 1200px) {    
+    /* Reasons section */
+    #benefits {
+        display: flex;
+        flex-direction: row;
+    }
+
+    #benefits > div {
+        flex: 1;
+    }
+
+    #benefits-image {
+        order: 0
+    }
+
+    #benefits-mental {
+        order: 1;
+    }
+
+    #benefits-mental > div {
+        align-self: flex-start;
+    }
+
+    #benefits-physical > div {
+        align-self: flex-end;
     }
 }
