--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -208,6 +208,14 @@ main {
     color: #5a5a5a;
 }
 
+/* Media query: large or landscape phones (576px and up) */
+@media screen and (min-width: 576px) {
+    #photos {
+        column-count: 2;
+        column-gap: 0;
+    }
+}
+
 /* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
     /* Header */
