--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,7 +7,7 @@
     box-sizing: border-box;
 }
 
-/* general styles */
+/*general styles */
 body {
     min-height: 100vh;
     display: flex;
@@ -27,7 +27,7 @@ h1, h2, h3 {
     display: none
 }
 
-/* header */
+/*header */
 header {
     background-color: #fff;
     padding: 0 1rem;
@@ -61,7 +61,7 @@ header a {
     border-bottom: 1px solid #3a3a3a;
 }
 
-/* navbar styles with dropdown toggle */
+/*navbar styles with dropdown toggle */
 nav {
     position: absolute;
     background-color: #fff;
@@ -73,7 +73,7 @@ nav {
     top: 100%;
 }
 
-/* Nav toggle */
+/*nav toggle */
 #nav-toggle:checked~nav {
     display: block;
 }
@@ -86,18 +86,18 @@ nav {
     font-size: 2rem;
 }
 
-/* Main content */
+/*main content */
 main {
-    /* Enlarge main element to push footer down*/
+    /*enlarge main element to push footer down*/
     flex: 1 0 auto;
-    /* Add margin at the top to prevent content from being covered by the header */
+    /*add margin at the top to prevent content from being covered by the header */
     margin-top: 47px;
-    /* Enable flex properties for child elements */
+    /*enable flex properties for child elements */
     display: flex;
     flex-direction: column;
 }
 
-/* Hero section*/
+/*hero section*/
 #hero {
     height: 600px;
     width: 100%;
@@ -119,7 +119,7 @@ main {
     color: #fff;
 }
 
-/* Reasons section */
+/*reasons section */
 #reasons {
     width: 90%;
     margin: 20px auto;
@@ -161,10 +161,10 @@ main {
     justify-content: center;
 }
 
-/* Meetup Times section */
+/*meetup Times section */
 #times {
     background: url('../images/dublin-city.webp') no-repeat center/cover;
-    /* Handles responsivity without the need for a media query */
+    /*handles responsivity without the need for a media query */
     display: flex;
     flex-wrap: wrap;
 }
@@ -325,6 +325,10 @@ main {
     #benefits-mental > div {
         text-align: end;
         align-self: flex-end;
+    }
+     /*gallery */
+    #photos {
+        column-count: 3;
     }
 }
 
