--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -339,30 +339,40 @@ main {
     }
 }
 
-@media screen and (min-width: 1200px) {    
-    /* Reasons section */
-    #benefits {
-        display: flex;
-        flex-direction: row;
-    }
+/* Large devices (laptops and desktops, 1200px and up) */
+@media screen and (min-width: 1200px) {
+  /* Reasons section */
+  #benefits {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
 
-    #benefits > div {
-        flex: 1;
-    }
+  #benefits > div {
+    flex: 1;
+  }
 
-    #benefits-image {
-        order: 0
-    }
+  #benefits-image {
+    order: 0;
+    flex: 0 0 100%;
+    text-align: center;
+    margin: 0 auto;
+  }
 
-    #benefits-mental {
-        order: 1;
-    }
+  #benefits-image img {
+    max-width: 100%;
+    height: auto;
+  }
 
-    #benefits-mental > div {
-        align-self: flex-start;
-    }
+  #benefits-mental {
+    order: 1;
+  }
 
-    #benefits-physical > div {
-        align-self: flex-end;
-    }
+  #benefits-mental > div {
+    align-self: flex-start;
+  }
+
+  #benefits-physical > div {
+    align-self: flex-end;
+  }
 }
