--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -119,46 +119,48 @@ main {
     color: #fff;
 }
 
-/*reasons section */
+/* Reasons section */
 #reasons {
-    width: 90%;
-    margin: 20px auto;
+  width: 90%;
+  margin: 20px auto;
 }
 
 #reasons h2 {
-    margin-bottom: 20px;
-    text-align: center;
-    font-size: 280%;
+  margin-bottom: 20px;
+  text-align: center;
+  font-size: 280%;
 }
 
-#benefits-physical > div,
-#benefits-mental > div {
-    line-height: 20px;
-    margin-bottom: 20px;
+#benefits-physical div,
+#benefits-mental div {
+  line-height: 20px;
+  margin-bottom: 20px;
 }
 
 #benefits p {
-    padding: 0 20px;
+  padding: 0 20px;
 }
 
 #benefits hr {
-    border-top: 1px solid #3a3a3a;
-    margin: 5px 0;
+  border-top: 1px solid #3a3a3a;
+  margin: 5px 0;
 }
 
 #circle-cover-bg {
-    background: url('../images/reasons-image.webp') no-repeat top center / cover;
-    height: 90vw;
-    width: 90vw;
-    margin-bottom: 20px;
-    border-radius: 50%;
-    max-width: 300px;
-    max-height: 300px;
+  background: url(../images/reasons-image.webp) no-repeat top center/cover;
+  height: 90vw;
+  width: 90vw;
+  margin-bottom: 20px;
+  border-radius: 50%;
+  max-width: 300px;
+  max-height: 300px;
 }
+
 #benefits-image {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
 }
 
 /*meetup Times section */
@@ -348,7 +350,7 @@ main {
     flex-wrap: wrap;
   }
 
-  #benefits > div {
+  #benefits div {
     flex: 1;
   }
 
@@ -368,11 +370,11 @@ main {
     order: 1;
   }
 
-  #benefits-mental > div {
+  #benefits-mental div {
     align-self: flex-start;
   }
 
-  #benefits-physical > div {
+  #benefits-physical div {
     align-self: flex-end;
   }
 }
